--- a/style.css
+++ b/style.css
@@ -5,36 +5,75 @@
   box-sizing: border-box;
 }
 
+a{
+  text-decoration: none;
+}
+
 img{
   width:100%;
   height: auto;
 }
 
-/* ===    =====================================================*/
 
+/* === VARIABLES ================================================= */
 :root{
-  font-size: 100%; /* 16px  - 1rem */
-  font-size: 62,5%;/* 10px  - 1rem */
+  /* font-size: 100%; 16px  - 1rem */
+  /* font-size: 62,5%; /*10px  - 1rem */
+
+  --hue: 159;
+  /* HSL color mode */
+
+  --base-color: hsl(var(--hue) 36% 57%);
+  --base-color-second: hsl(var(--hue) 65% 88%);
+  --base-color-alt: hsl(var(--hue) 57% 53%);
+  --title-color: hsl(var(--hue) 41% 10%);
+  --text-color: hsl(0 0% 46%);
+  --text-color-light: hsl(0 0% 98%);
+  --body-color: hsl(0 0% 98%)
 }
+
+/* === BASE =====================================================*/
+
+body{
+  font: 400 1rem 'DM Sans', sans-serif;
+  color: var(--text-color);
+  background: var(--body-color);
+  -webkit-font-smoothing: antialiased; /* deixa a fonte mais leve*/
+}
+
+h1{
+  font: 700 1.85rem 'Poppins', sans-serif;
+  color: var(--title-color);
+  -webkit-font-smoothing:auto;
+}
+
+.button{
+  color: var(--color );
+}
+
 /*  */
 
 /* === LAYOUT =====================================================*/
 
 #header{
-  height: 4.5rem; /* 72px = 16px 4.5rem */
-
-}
-
-#header nav{
-
+  border-bottom: 1px solid #e4e4e4;
+  margin-bottom: 2rem; /* converter px para rem 30px/16px = 2rem*/
 }
 
 nav{
+  height: 4.5rem; /* 72px = 16px 4.5rem */
   display: flex;
+  align-items:center;
   justify-content: space-between;
 }
 .logo{
+  font: 700 1.31rem 'Poppins', sans-serif;
+  color: var(--title-color);
 
+}
+
+.logo span{
+  color: var(--base-color)
 }
 
 .container {
@@ -43,5 +82,47 @@ nav{
   margin-right: 1.5rem;
 }
 
-/* === HOME =====================================================*/
+.grid{
+  display: grid;
+  gap: 2rem;
+}
 
+.section{
+  padding: 5rem 0;
+}
+
+/* === HOME =====================================================*/
+#home .container{
+  margin: 0;
+}
+
+
+#home .image::before{
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -16.8%;
+  top:0;
+  left: 16.7%;
+  left:0;
+  z-index: 0;
+}
+
+
+#home .image img{
+  position: relative;
+  right: 2.93rem;
+}
+
+#home .image img,
+#home .image::before{
+  border-radius: 0.25rem;
+}
+
+#home .text{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  text-align: center;
+}
