--- a/style.css
+++ b/style.css
@@ -48,9 +48,29 @@ h1{
 }
 
 .button{
-  color: var(--color );
+  background-color: var(--base-color );
+  color: var(--text-color-light);
+  height: 3.5rem;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 2rem;
+  border-radius: 0.25rem;
+  font: 500 1rem 'DM Sans', sans-serif;
+  transition: background 0.3s;
 }
 
+.button:hover{
+  background-color: var(--base-color-alt);
+}
+
+.divider-1{
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 36%, 57%, 1) 0%,
+    hsla(var(--hue),65%, 88%, 0.34)100%
+  );
+}
 /*  */
 
 /* === LAYOUT =====================================================*/
@@ -96,6 +116,10 @@ nav{
   margin: 0;
 }
 
+#home .image {
+  position: relative;
+  right: 2.93rem;
+}
 
 #home .image::before{
   content: '';
@@ -104,17 +128,10 @@ nav{
   background: var(--base-color-second);
   position: absolute;
   top: -16.8%;
-  top:0;
   left: 16.7%;
-  left:0;
-  z-index: 0;
+  z-index: -1;
 }
 
-
-#home .image img{
-  position: relative;
-  right: 2.93rem;
-}
 
 #home .image img,
 #home .image::before{
@@ -125,4 +142,12 @@ nav{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
+}
+
+#home .text h1{
+  margin-bottom: 1rem;
+}
+
+#home .text p {
+  margin-bottom: 2rem;
 }
