--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ img{
   /* font-size: 100%; 16px  - 1rem */
   /* font-size: 62,5%; /*10px  - 1rem */
 
+  
   --hue: 159;
+  /* --hue: 345; */
+
+
   /* HSL color mode */
 
   --base-color: hsl(var(--hue) 36% 57%);
@@ -78,6 +82,7 @@ h1{
 #header{
   border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem; /* converter px para rem 30px/16px = 2rem*/
+  display: flex;
 }
 
 nav{
@@ -112,6 +117,10 @@ nav{
 }
 
 /* === HOME =====================================================*/
+#home{
+  overflow: hidden;
+}
+
 #home .container{
   margin: 0;
 }
