--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+ul{
+  list-style: none;
+}
+
 a{
   text-decoration: none;
 }
@@ -21,8 +25,6 @@ img{
   /* font-size: 62,5%; /*10px  - 1rem */
 
   --header-height: 4.5rem;
-
-
 
   /* colors */
   --hue: 159;
@@ -49,7 +51,7 @@ body{
   -webkit-font-smoothing: antialiased; /* deixa a fonte mais leve*/
 }
 
-h1{
+.title{
   font: 700 1.85rem 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing:auto;
@@ -110,13 +112,9 @@ h1{
   background-color: var(--body-color);
 }
 
-nav{
-  height: var(--header-height); /* 72px = 16px 4.5rem */
-  display: flex;
-  align-items:center;
-  justify-content: space-between;
-  width: 100%;
-}
+
+/* === LOGO ======================================*/
+
 .logo{
   font: 700 1.31rem 'Poppins', sans-serif;
   color: var(--title-color);
@@ -128,9 +126,81 @@ nav{
 }
 
 main{
-  margin-top: var(--header-height);
+  margin-top: calc(var(--header-height) + 2rem);
 }
 
+/* === NAVIGATION ======================================*/
+nav{
+  height: var(--header-height); /* 72px = 16px 4.5rem */
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+nav ul li{
+  text-align: center;
+}
+
+nav ul li a{
+  transition: 0.2s;
+  position: relative;
+}
+
+nav ul li a:hover{
+  color: var(--base-color);
+}
+
+nav ul li a::after{
+  content: '';
+  width:0%;
+  height:2px;
+
+  background:var(--base-color);
+
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+
+  transition: width 0.2s;  
+
+}
+
+nav ul li a:hover::after{
+  width: 100%;  
+}
+
+
+nav .menu{
+  opacity: 0;
+  visibility: hidden;
+}
+
+/* Mostrar menu */
+
+/* nav. vai receber uma class show */
+nav.show .menu{
+  opacity: 1;
+  visibility: visible;
+
+  background: var(--body-color);
+
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+nav.show .menu{
+  display: grid;
+  place-content: center; /* centraliza no meio da tela */
+}
+
+nav.show ul.grid{
+  gap: 4rem;
+}
 
 /* === HOME =====================================*/
 #home{
