--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ body{
 /*  */
 
 /* === LAYOUT ====================================*/
-
 .container {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -110,6 +109,14 @@ body{
 
 .section .title{
   margin-bottom: 1rem;
+}
+
+.section header{
+  margin-bottom: 4rem;
+}
+
+.section header strong{
+  color: var(--base-color);
 }
 
 #header{
@@ -315,8 +322,36 @@ nav.show div.icon-close{
   border-radius: 0.25rem;
 }
 
+#about .text h2{
+  margin-top:2rem ;
+}
 
 #about .text{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+
+/* === SERVICES==============================*/
+.cards.grid{
+  gap:1.5rem;
+}
+
+.card{
+  padding:3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom:0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
+  text-align: center;
+}
+
+.card i{
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+
+.card .title{
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
 }
