--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img{
 }
 
 
-/* === VARIABLES ================================ */
+/* === VARIABLES =========================== */
 :root{
   /* font-size: 100%; 16px  - 1rem */
   /* font-size: 62,5%; /*10px  - 1rem */
@@ -42,7 +42,10 @@ img{
   --body-color: hsl(0 0% 98%)
 }
 
-/* === BASE ======================================*/
+/* === BASE =================================*/
+html{
+  scroll-behavior: smooth;
+}
 
 body{
   font: 400 1rem 'DM Sans', sans-serif;
@@ -132,6 +135,21 @@ body{
   background-color: var(--body-color);
 }
 
+#header.scroll{
+  background:var(--base-color);
+  box-shadow: 0px 0px 12px rgba(0,0,0,0.2)
+}
+
+#header.scroll .logo span{
+  color: white;
+  transition: 0.3s;
+}
+
+#header.scroll .icon-menu{
+  color: white;
+  transition: 0.3s;
+
+}
 
 main{
   margin-top: calc(var(--header-height) + 2rem);
@@ -164,7 +182,7 @@ nav ul li{
 }
 
 nav ul li a{
-  transition: 0.2s;
+  transition: 0.3s;
   position: relative;
 }
 
@@ -183,7 +201,7 @@ nav ul li a::after{
   left: 0;
   bottom: -1.5rem;
 
-  transition: width 0.2s;  
+  transition: width 0.3s;  
 
 }
 
@@ -194,10 +212,14 @@ nav ul li a:hover::after{
 nav .menu{
   opacity: 0;
   visibility: hidden;
+  top: -20rem;
+  transition:0.3s;
 }
 
+nav .menu ul{
+  display: none;
+}
 /* Mostrar menu */
-
 /* nav. vai receber uma class show */
 nav.show .menu{
   opacity: 1;
@@ -211,11 +233,13 @@ nav.show .menu{
   position: fixed;
   top: 0;
   left: 0;
-}
 
-nav.show .menu{
   display: grid;
   place-content: center; /* centraliza no meio da tela */
+}
+
+nav.show .menu ul{
+  display: grid;
 }
 
 nav.show ul.grid{
@@ -234,25 +258,21 @@ nav .icon-close{
   opacity: 0;
   
     position: absolute;
+    top: -1.5rem;
     right:1.5rem;
+
+    transition: 0.3s;
 }
 
 nav.show div.icon-close{
   visibility: visible;
   opacity: 1;
+  top: 1.5rem;
 }
 
 /* === HOME =====================================*/
 #home{
   overflow: hidden;
-}
-
-#home .text h1{
-  margin-bottom: 1rem;
-}
-
-#home .text p {
-  margin-bottom: 2rem;
 }
 
 #home .container{
@@ -290,7 +310,16 @@ nav.show div.icon-close{
   text-align: center;
 }
 
-/* === LAYOUT ============================*/
+
+#home .text h1{
+  margin-bottom: 1rem;
+}
+
+#home .text p {
+  margin-bottom: 2rem;
+}
+
+/* === ABOUT ============================*/
 #about{
   background: white;
 }
@@ -322,9 +351,9 @@ nav.show div.icon-close{
   border-radius: 0.25rem;
 }
 
-#about .text h2{
+/* #about .text h2{
   margin-top:2rem ;
-}
+} */
 
 #about .text{
   margin-left: 1.5rem;
