--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ img{
   height: auto;
 }
 
+/* obs. */
+
+/* converter px para rem
+px -> rem
+  px   / 16
+*/
+
 
 /* === VARIABLES =========================== */
 :root{
@@ -443,6 +450,61 @@ nav.show div.icon-close{
   padding: 4rem 1rem;
 }
 
+.swiper-pagination-bullet{
+  width:0.75rem;
+  height:0.75rem;
+}
+
 .swiper-pagination-bullet-active{
+  background:var(--base-color);
 
 }
+
+/*===== CONTACT================================== */
+
+#contact .grid{
+  gap: 4rem;
+}
+
+#contact .text p {
+  margin-bottom: 2rem;
+}
+
+#contact .button i,
+#contact ul li i {
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+}
+
+#contact ul.grid{
+  gap: 2rem;
+}
+
+#contact ul li {
+  display:flex;
+  align-items: center;
+}
+
+#contact ul li i {
+  color: var(--base-color);
+}
+
+
+/* consertando o icone do phone */
+#contact .icon-phone {
+  width: 1.5rem;
+  height: 1.5rem; 
+
+  position: relative;
+  top: 0;
+  left: 0;
+  /* padding-left: 2rem; */
+  margin-left: 2rem;
+  
+}
+
+#contact .links ul li img .icon-phone {
+  /* padding-left: 2rem; */
+}
+
+
