--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ main{
   color: var(--base-color)
 }
 
+.logo-alt span{
+  color: var(--body-color);
+}
 
 /* === NAVIGATION ======================================*/
 nav{
@@ -442,8 +445,7 @@ nav.show div.icon-close{
   object-fit: cover;
   clip-path: circle() ;
   margin-right: 0.5rem;
-}
-
+} 
 /* swiper - slider de imagem */
 .swiper-slide{
   height:auto;
@@ -516,3 +518,18 @@ nav.show div.icon-close{
 }
 
 
+/* ===FOOTER========== */
+
+footer {
+  background: var(--base-color);
+}
+
+footer .logo{
+  display: inline-block;
+  margin-bottom: 1.5rem;
+}
+
+footer .brand p {
+  color: var(--text-color-light);
+  margin-bottom: 0.75rem;
+}
