--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nr2uwx');
-  src:  url('fonts/icomoon.eot?nr2uwx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nr2uwx') format('truetype'),
-    url('fonts/icomoon.woff?nr2uwx') format('woff'),
-    url('fonts/icomoon.svg?nr2uwx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ieg9v9');
+  src:  url('fonts/icomoon.eot?ieg9v9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ieg9v9') format('truetype'),
+    url('fonts/icomoon.woff?ieg9v9') format('woff'),
+    url('fonts/icomoon.svg?ieg9v9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e907";
+}
+.icon-phone:before {
+  content: "\e90c";
+}
 .icon-close:before {
   content: "\e900";
 }
@@ -45,9 +51,6 @@
 }
 .icon-menu:before {
   content: "\e906";
-}
-.icon-phone:before {
-  content: "\e907";
 }
 .icon-trim:before {
   content: "\e908";
