--- a/style.css
+++ b/style.css
@@ -492,32 +492,6 @@ nav.show div.icon-close{
 }
 
 
-
-
-
-
-
-
-
-
-/* consertando o icone do phone */
-#contact .icon-phone {
-  width: 1.5rem;
-  height: 1.5rem; 
-
-  position: relative;
-  top: 0;
-  left: 0;
-  /* padding-left: 2rem; */
-  margin-left: 2rem;
-  
-}
-
-#contact .links ul li img .icon-phone {
-  /* padding-left: 2rem; */
-}
-
-
 /* ===FOOTER========== */
 
 footer {
@@ -532,4 +506,27 @@ footer .logo{
 footer .brand p {
   color: var(--text-color-light);
   margin-bottom: 0.75rem;
+}
+
+footer i {
+  font-size: 1.5rem;
+  color: var(--text-color-light);
+}
+
+footer .social a {
+  margin-right: 2rem;
+}
+
+/* Back to top */
+.back-to-top {
+  background: var(--base-color);
+  color: var(--text-color-light);
+
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+
+  padding: 0.5rem;
+  clip-path: circle();
+  font-size: 1.5rem;
 }
