--- a/style.css
+++ b/style.css
@@ -47,7 +47,13 @@ px -> rem
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%)
+
+  
+  /* fonts */
+  --title-font-size: 1.875rem;
+ 
 }
+
 
 /* === BASE =================================*/
 html{
@@ -62,9 +68,10 @@ body{
 }
 
 .title{
-  font: 700 1.85rem 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing:auto;
+  
 }
 
 .button{
@@ -515,9 +522,16 @@ footer i {
 
 footer .social a {
   margin-right: 2rem;
+
+  display: inline-block;/*animação*/
+  transition: .5s;
 }
 
-/* Back to top */
+footer .social a:hover{
+  transform: translateY(-8px);
+}
+
+/*=== Back to top ================== */
 .back-to-top {
   background: var(--base-color);
   color: var(--text-color-light);
@@ -529,4 +543,42 @@ footer .social a {
   padding: 0.5rem;
   clip-path: circle();
   font-size: 1.5rem;
+  line-height: 0;
+
+  z-index: 100;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+  
 }
+
+.back-to-top.show{
+  visibility:visible;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+/* === MEDIA QUERIES ========== */
+/* extra large devices: 1200 >  */
+/* large devices: 1023 >  */
+/* large devices: 992 >  */
+
+
+
+
+
+/* medium devices: 767 > */
+
+
+@media (min-width: 992px){
+  :root{
+    --title-font-size: 2.2rem;
+  }
+
+}
+
+
