--- a/style.css
+++ b/style.css
@@ -39,19 +39,22 @@ px -> rem
 
 
   /* HSL color mode */
-
   --base-color: hsl(var(--hue) 36% 57%);
   --base-color-second: hsl(var(--hue) 65% 88%);
   --base-color-alt: hsl(var(--hue) 57% 53%);
   --title-color: hsl(var(--hue) 41% 10%);
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
-  --body-color: hsl(0 0% 98%)
+  --body-color: hsl(0 0% 98%);
 
   
   /* fonts */
   --title-font-size: 1.875rem;
- 
+  --subtitle-font-size: 1rem;
+
+
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
 }
 
 
@@ -61,17 +64,18 @@ html{
 }
 
 body{
-  font: 400 1rem 'DM Sans', sans-serif;
+  font: 400 1rem var(--body-font);
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased; /* deixa a fonte mais leve*/
 }
 
 .title{
-  font: 700 var(--title-font-size) 'Poppins', sans-serif;
+
+  font: 700 var(--title-font-size) var(--title-font);
   color: var(--title-color);
   -webkit-font-smoothing:auto;
-  
+    
 }
 
 .button{
@@ -82,7 +86,7 @@ body{
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem 'DM Sans', sans-serif;
+  font: 500 1rem var(--body-font);
   transition: background 0.3s;
 }
 
@@ -121,11 +125,16 @@ body{
 }
 
 .section{
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title{
   margin-bottom: 1rem;
+}
+
+.section .subtitle{
+  font-size: var(--subtitle-font-size);
+
 }
 
 .section header{
@@ -165,14 +174,11 @@ body{
 
 }
 
-main{
-  margin-top: calc(var(--header-height) + 2rem);
-}
 
 /* === LOGO ======================================*/
 
 .logo{
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
   color: var(--title-color);
 
 }
@@ -243,14 +249,14 @@ nav.show .menu{
   visibility: visible;
 
   background: var(--body-color);
-
+  
   height: 100vh;
   width: 100vw;
 
   position: fixed;
   top: 0;
   left: 0;
-
+  
   display: grid;
   place-content: center; /* centraliza no meio da tela */
 }
@@ -505,6 +511,10 @@ footer {
   background: var(--base-color);
 }
 
+footer.section{
+  padding: 4rem 0;
+}
+
 footer .logo{
   display: inline-block;
   margin-bottom: 1.5rem;
@@ -520,9 +530,12 @@ footer i {
   color: var(--text-color-light);
 }
 
-footer .social a {
-  margin-right: 2rem;
+footer .social{
+  grid-auto-flow: column;
+  width: fit-content;
+}
 
+footer .social a {
   display: inline-block;/*animação*/
   transition: .5s;
 }
@@ -570,13 +583,51 @@ footer .social a:hover{
 
 
 
+@media (min-width:1200px){
+  
+  .section{
+    padding: 10rem 0;
+  }
+  
+
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title{
+    font: 400 1rem var(--body-font)
+  }
+
+  nav .icon-menu {
+    display: none;
+  }
+
+
+
+  main{
+    margin-top: var(--header-height);
+  }
+
+  
+
+}
+
+
 
 /* medium devices: 767 > */
 
 
 @media (min-width: 992px){
   :root{
-    --title-font-size: 2.2rem;
+    --title-font-size: 2.25rem;
+    --subtitle-font-size: 1.125rem;
   }
 
 }
