--- a/style.css
+++ b/style.css
@@ -584,12 +584,30 @@ footer .social a:hover{
 
 
 @media (min-width:1200px){
-  
-  .section{
+/* reusable classes */
+.container{
+  max-width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+}  
+ 
+.section{
     padding: 10rem 0;
   }
   
+  .section header,
+  #testimonials header{
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
+  .button {
+    height: 3.125rem;
+  }
+
+/* navigation */
   nav .menu {
     opacity: 1;
     visibility: visible;
@@ -602,20 +620,99 @@ footer .social a:hover{
   }
 
   nav .menu ul li a.title{
-    font: 400 1rem var(--body-font)
+    /* font: 400 1rem var(--body-font); */
+    font: 700 1rem var(--body-font);
   }
+
+  
+  header.scroll .menu ul li a:hover{
+    color: var(--base-color-second);
+  }
+  
+  /* traço  marca seção */
+ header.scroll .menu ul li a::after{
+  background-color: var(--base-color-second);
+  
+  }
+
+
 
   nav .icon-menu {
     display: none;
   }
-
-
-
+  
+  /* layout */
   main{
     margin-top: var(--header-height);
   }
 
+  /* home */
+  #home .container{
+    grid-auto-flow: column;
+    justify-content: space-between; 
+    margin: 0 auto;
+  }
+
+  #home .image{
+    order:1; /* grid */
+  }
+
+  #home .text {
+    order:0;
+    max-width: 24rem;
+    text-align: left;
+  }
+
+  /* about */
+  #about .container{
+    margin: 0 auto;
+    grid-auto-flow: column;        
+  }
+
   
+  /* services */
+  .cards{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  /* testimonials */
+  #testimonials .container{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* contact */
+  #contact .container{
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  #contact .text{
+    max-width: 25rem;
+  }
+
+/* footer */
+footer.section{
+  padding: 3.75rem 0;
+}
+
+footer .container{
+  grid-auto-flow: column;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+footer .logo{
+  font-size: 2.25rem;
+}
+
+
 
 }
 
